--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <a href="mailto:tharu1999mu@gmail.com"><i class="fa-regular fa-envelope"></i></a>
 
         </div>
-        <a href="SE_CV.pdf" class="btn" download>Download CV</a>
+        <a href="Miyuni Tharushika CV.pdf" class="btn" download>Download CV</a>
     </div>
     <div class="home-img">
         <img src="img/profilePicture.png" alt="">
@@ -266,7 +266,7 @@
 <!--FOOTER DESIGN-->
 <footer class="footer">
     <div class="footer-text">
-        <p>Copyright &copy; 2024 by @heresthcode | All Rights Reserved</p>
+        <p>Copyright &copy; 2024 by @Miyuni Tharushika | All Rights Reserved</p>
 
 
     </div>
